# FastAndroid

./: .gitignore  Untitled Diagram.drawio  ajcore.20211014.195817.927.txt  ajcore.20211014.195841.687.txt  ajcore.20211014.200938.257.txt  ajcore.20211014.201001.807.txt  ajcore.20211014.212842.767.txt  ajcore.20211015.092250.073.txt  ajcore.20211015.094455.239.txt  ajcore.20211015.095723.216.txt  ajcore.20211015.100237.414.txt  ajcore.20211015.100740.635.txt  ajcore.20211015.100845.270.txt  ajcore.20211015.100904.557.txt  ajcore.20211015.101243.896.txt  ajcore.20211015.101308.010.txt  ajcore.20211015.101351.406.txt  ajcore.20211015.101530.782.txt  ajcore.20211015.101826.078.txt  ajcore.20211015.102221.542.txt  ajcore.20211015.102253.609.txt  ajcore.20211015.103458.619.txt  ajcore.20211015.103930.812.txt  ajcore.20211015.104714.897.txt  ajcore.20211015.104835.804.txt  ajcore.20211015.104933.916.txt  and_res_guard.gradle  base_lib.gradle  base_module.gradle  build.gradle  chapter02.gradle  chapter04.gradle  config.gradle  config.properties  core.gradle  dependencies.txt  gradle-mvn-push.gradle  gradle.properties  gradle_knowledge.gradle  gradletest.gradle  (+22 more)
AndResGuard/: config_dev.xml  config_gp.xml
app/: .gitignore  Camry  build.gradle  ownership.yaml  proguard-rules.pro  traceconfig.txt  version.gradle
app/src/main/cpp/: CMakeLists.txt  hello-jni.c  hello-jnicallback.c  test.cpp
artemis/: build.gradle
artemis_annotation/: build.gradle
artemis_compiler/: build.gradle
baselib/: build.gradle  proguard-rules.pro
basic_res/: build.gradle
buildSrc/: build.gradle  (+1 more)
(+4995 files in other folders)
